Bug with burger menu on iOS devices has been fixed

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -74,8 +74,8 @@ body {
 	flex-direction: column;
 	overflow: hidden;
 	.menu-open & {
-		height: 100vh; 
-		position: relative;
+		overflow: hidden;
+		height: 100%;
 	}
 	// Прижимаем footer
 	> main {
